@@ -31,6 +31,7 @@ import groovy.json.JsonException;
 import java.util.List;
 import java.util.Map;
 
+import org.hamcrest.Matchers;
 import org.junit.Test;
 
 import com.jayway.restassured.path.json.support.Book;
@@ -93,26 +94,26 @@ public class JsonPathTest {
             "}";
     @Test
     public void getList() throws Exception {
-        final List<String> categories = new JsonPath(this.JSON).get("store.book.category");
+        final List<String> categories = new JsonPath(JSON).get("store.book.category");
         assertThat(categories.size(), equalTo(4));
         assertThat(categories, hasItems("reference", "fiction"));
     }
 
     @Test
     public void firstBookCategory() throws Exception {
-        final String category = with(this.JSON).get("store.book[0].category");
+        final String category = with(JSON).get("store.book[0].category");
         assertThat(category, equalTo("reference"));
     }
 
     @Test
     public void lastBookTitle() throws Exception {
-        final String title = with(this.JSON).get("store.book[-1].title");
+        final String title = with(JSON).get("store.book[-1].title");
         assertThat(title, equalTo("The Lord of the Rings"));
     }
 
     @Test
     public void booksBetween5And15() throws Exception {
-        final List<Map<String, ?>> books = with(this.JSON).get("store.book.findAll { book -> book.price >= 5 && book.price <= 15 }");
+        final List<Map<String, ?>> books = with(JSON).get("store.book.findAll { book -> book.price >= 5 && book.price <= 15 }");
         assertThat(books.size(), equalTo(3));
 
         final String author = (String) books.get(0).get("author");
@@ -124,13 +125,13 @@ public class JsonPathTest {
 
     @Test
     public void sizeInPath() throws Exception {
-        final Integer size = with(this.JSON).get("store.book.size()");
+        final Integer size = with(JSON).get("store.book.size()");
         assertThat(size, equalTo(4));
     }
 
     @Test
     public void getRootObjectAsMap() throws Exception {
-        final Map<String, Map> store = given(this.JSON).get("store");
+        final Map<String, Map> store = given(JSON).get("store");
         assertThat(store.size(), equalTo(2));
 
         final Map<String, Object> bicycle = store.get("bicycle");
@@ -142,7 +143,7 @@ public class JsonPathTest {
 
     @Test
     public void rootPath() throws Exception {
-        final JsonPath jsonPath = new JsonPath(this.JSON).setRoot("store.book");
+        final JsonPath jsonPath = new JsonPath(JSON).setRoot("store.book");
         assertThat(jsonPath.getInt("size()"), equalTo(4));
         assertThat(jsonPath.getList("author", String.class), hasItem("J. R. R. Tolkien"));
 
@@ -150,129 +151,129 @@ public class JsonPathTest {
 
     @Test
     public void supportsGettingEntireObjectGraphUsingEmptyString() throws Exception {
-        final List<Map<String, String>> object = from(this.JSON2).get("");
+        final List<Map<String, String>> object = from(JSON2).get("");
         assertThat(object.get(0).get("email"), equalTo("name1@mail.com"));
     }
 
     @Test
     public void supportsGettingEntireObjectGraphUsing$() throws Exception {
-        final List<Map<String, String>> object = from(this.JSON2).get("$");
+        final List<Map<String, String>> object = from(JSON2).get("$");
         assertThat(object.get(0).get("email"), equalTo("name1@mail.com"));
     }
 
     @Test
     public void supportsGettingEntireObjectGraphUsingNoArgumentGet() throws Exception {
-        final List<Map<String, String>> object = from(this.JSON2).get();
+        final List<Map<String, String>> object = from(JSON2).get();
         assertThat(object.get(0).get("email"), equalTo("name1@mail.com"));
     }
 
     @Test
     public void getValueFromUnnamedRootObject() throws Exception {
-        final Map<String, String> object = from(this.JSON2).get("get(0)");
+        final Map<String, String> object = from(JSON2).get("get(0)");
         assertThat(object.get("email"), equalTo("name1@mail.com"));
     }
 
     @Test
     public void getValueFromUnnamedRootObjectUsingBrackets() throws Exception {
-        final Map<String, String> object = from(this.JSON2).get("[0]");
+        final Map<String, String> object = from(JSON2).get("[0]");
         assertThat(object.get("email"), equalTo("name1@mail.com"));
     }
 
     @Test
     public void getSubValueFromUnnamedRootObjectUsingBrackets() throws Exception {
-        final String object = from(this.JSON2).getString("[0].email");
+        final String object = from(JSON2).getString("[0].email");
         assertThat(object, equalTo("name1@mail.com"));
     }
 
     @Test
     public void getNumericalValues() {
-        assertThat(with(this.JSON).getDouble("store.book[0].price"), equalTo(8.95D));
-        assertThat(with(this.JSON).getFloat("store.book[0].price"), equalTo(8.95F));
+        assertThat(with(JSON).getDouble("store.book[0].price"), equalTo(8.95D));
+        assertThat(with(JSON).getFloat("store.book[0].price"), equalTo(8.95F));
 
         // The price is stored as an integer
-        assertThat(with(this.JSON).getByte("store.book[1].price"), equalTo((byte)12));
-        assertThat(with(this.JSON).getShort("store.book[1].price"), equalTo((short)12));
-        assertThat(with(this.JSON).getInt("store.book[1].price"), equalTo(12));
-        assertThat(with(this.JSON).getLong("store.book[1].price"), equalTo(12L));
+        assertThat(with(JSON).getByte("store.book[1].price"), equalTo((byte)12));
+        assertThat(with(JSON).getShort("store.book[1].price"), equalTo((short)12));
+        assertThat(with(JSON).getInt("store.book[1].price"), equalTo(12));
+        assertThat(with(JSON).getLong("store.book[1].price"), equalTo(12L));
 
         // The atoms is stored as a long
-        assertThat(with(this.JSON).getByte("store.bicycle.atoms"), equalTo((byte)Long.MAX_VALUE));
-        assertThat(with(this.JSON).getShort("store.bicycle.atoms"), equalTo((short)Long.MAX_VALUE));
-        assertThat(with(this.JSON).getInt("store.bicycle.atoms"), equalTo((int)Long.MAX_VALUE));
-        assertThat(with(this.JSON).getLong("store.bicycle.atoms"), equalTo(Long.MAX_VALUE));
+        assertThat(with(JSON).getByte("store.bicycle.atoms"), equalTo((byte)Long.MAX_VALUE));
+        assertThat(with(JSON).getShort("store.bicycle.atoms"), equalTo((short)Long.MAX_VALUE));
+        assertThat(with(JSON).getInt("store.bicycle.atoms"), equalTo((int)Long.MAX_VALUE));
+        assertThat(with(JSON).getLong("store.bicycle.atoms"), equalTo(Long.MAX_VALUE));
     }
 
     @Test
     public void convertsValueToStringWhenExplicitlyRequested() throws Exception {
-        String phoneNumber = from(this.JSON2).getString("phone[0]");
+        String phoneNumber = from(JSON2).getString("phone[0]");
 
         assertThat(phoneNumber, equalTo("3456789"));
     }
 
     @Test
     public void convertsValueToIntWhenExplicitlyRequested() throws Exception {
-        int phoneNumber = from(this.JSON2).getInt("phone[0]");
+        int phoneNumber = from(JSON2).getInt("phone[0]");
 
         assertThat(phoneNumber, equalTo(3456789));
     }
 
     @Test
     public void convertsValueToDoubleWhenExplicitlyRequested() throws Exception {
-        double phoneNumber = from(this.JSON2).getDouble("phone[0]");
+        double phoneNumber = from(JSON2).getDouble("phone[0]");
 
         assertThat(phoneNumber, equalTo(3456789d));
     }
 
     @Test
     public void convertsValueToFloatWhenExplicitlyRequested() throws Exception {
-        float phoneNumber = from(this.JSON2).getFloat("phone[0]");
+        float phoneNumber = from(JSON2).getFloat("phone[0]");
 
         assertThat(phoneNumber, equalTo(3456789f));
     }
 
     @Test
     public void convertsListMembersToDefinedTypeIfPossible() throws Exception {
-        final List<Integer> phoneNumbers = with(this.JSON2).getList("phone", int.class);
+        final List<Integer> phoneNumbers = with(JSON2).getList("phone", int.class);
 
         assertThat(phoneNumbers, hasItems(3456789, 1234567, 2345678));
     }
 
     @Test
     public void getMapWithGenericType() throws Exception {
-        final Map<String, String> map = with(this.JSON_MAP).getMap("$", String.class, String.class);
+        final Map<String, String> map = with(JSON_MAP).getMap("$", String.class, String.class);
 
         assertThat(map, allOf(hasEntry("price1", "12.3"), hasEntry("price2", "15.0")));
     }
 
     @Test
     public void getMapWithAnotherGenericType() throws Exception {
-        final Map<String, Float> map = with(this.JSON_MAP).getMap("$", String.class, float.class);
+        final Map<String, Float> map = with(JSON_MAP).getMap("$", String.class, float.class);
 
         assertThat(map, allOf(hasEntry("price1", 12.3f), hasEntry("price2", 15.0f)));
     }
 
     @Test
     public void getStringConvertsTheResultToAString() throws Exception {
-        final String priceAsString = with(this.JSON).getString("store.book.price[0]");
+        final String priceAsString = with(JSON).getString("store.book.price[0]");
 
         assertThat(priceAsString, is("8.95"));
     }
 
     @Test(expected = JsonException.class)
     public void malformedJson() throws Exception {
-        from(this.MALFORMED_JSON).get("a");
+        from(MALFORMED_JSON).get("a");
     }
 
     @Test
     public void getObjectWorksWhenPathPointsToAJsonObject() throws Exception {
-        final Book book = from(this.JSON).getObject("store.book[2]", Book.class);
+        final Book book = from(JSON).getObject("store.book[2]", Book.class);
 
         assertThat(book, equalTo(new Book("fiction", "Herman Melville", "Moby Dick", "0-553-21311-3", 8.99f)));
     }
 
     @Test
     public void getObjectAsMapWorksWhenPathPointsToAJsonObject() throws Exception {
-        final Map<String, String> book = from(this.JSON).getObject("store.book[2]", Map.class);
+        final Map<String, String> book = from(JSON).getObject("store.book[2]", Map.class);
 
         assertThat(book, hasEntry("category", "fiction"));
         assertThat(book, hasEntry("author", "Herman Melville"));
@@ -280,70 +281,70 @@ public class JsonPathTest {
 
     @Test
     public void getObjectWorksWhenPathPointsToAList() throws Exception {
-        final List<String> categories = from(this.JSON).getObject("store.book.category", List.class);
+        final List<String> categories = from(JSON).getObject("store.book.category", List.class);
 
         assertThat(categories, hasItems("reference", "fiction"));
     }
 
     @Test
     public void getObjectAsFloatWorksWhenPathPointsToAFloat() throws Exception {
-        final Float price = from(this.JSON).getObject("store.book.price[0]", Float.class);
+        final Float price = from(JSON).getObject("store.book.price[0]", Float.class);
 
         assertThat(price, equalTo(8.95f));
     }
 
     @Test
     public void getObjectAsStringWorksWhenPathPointsToAString() throws Exception {
-        final String category = from(this.JSON).getObject("store.book.category[0]", String.class);
+        final String category = from(JSON).getObject("store.book.category[0]", String.class);
 
         assertThat(category, equalTo("reference"));
     }
 
     @Test
     public void jsonPathSupportsPrettifiyingJson() throws Exception {
-        final String prettyJson = with(this.JSON2).prettify();
+        final String prettyJson = with(JSON2).prettify();
 
         assertThat(prettyJson, equalTo("[\n    {\n        \"phone\": \"3456789\",\n        \"alias\": \"name one\",\n        \"email\": \"name1@mail.com\"\n    },\n    {\n        \"phone\": \"1234567\",\n        \"alias\": \"name two\",\n        \"email\": \"name2@mail.com\"\n    },\n    {\n        \"phone\": \"2345678\",\n        \"alias\": \"name three\",\n        \"email\": \"name3@mail.com\"\n    }\n]"));
     }
 
     @Test
     public void jsonPathSupportsPrettyPrintingJson() throws Exception {
-        final String prettyJson = with(this.JSON2).prettyPrint();
+        final String prettyJson = with(JSON2).prettyPrint();
 
         assertThat(prettyJson, equalTo("[\n    {\n        \"phone\": \"3456789\",\n        \"alias\": \"name one\",\n        \"email\": \"name1@mail.com\"\n    },\n    {\n        \"phone\": \"1234567\",\n        \"alias\": \"name two\",\n        \"email\": \"name2@mail.com\"\n    },\n    {\n        \"phone\": \"2345678\",\n        \"alias\": \"name three\",\n        \"email\": \"name3@mail.com\"\n    }\n]"));
     }
 
     @Test
     public void canParseJsonDocumentWhenFirstKeyIsIntegerUsingManualEscaping() throws Exception {
-        final float number = from(this.JSON_PATH_STARTING_WITH_NUMBER).getFloat("'0'");
+        final float number = from(JSON_PATH_STARTING_WITH_NUMBER).getFloat("'0'");
 
         assertThat(number, equalTo(12.3f));
     }
 
     @Test
     public void canParseJsonDocumentWhenFirstKeyThatIsAIntegerUsingNoEscaping() throws Exception {
-        final float number = from(this.JSON_PATH_STARTING_WITH_NUMBER).getFloat("0");
+        final float number = from(JSON_PATH_STARTING_WITH_NUMBER).getFloat("0");
 
         assertThat(number, equalTo(12.3f));
     }
 
     @Test
     public void canParseJsonDocumentWhenPathIncludesKeyThatIsAIntegerUsingNoEscaping() throws Exception {
-        final float number = from(this.JSON_PATH_WITH_NUMBER).getFloat("map.0");
+        final float number = from(JSON_PATH_WITH_NUMBER).getFloat("map.0");
 
         assertThat(number, equalTo(12.3f));
     }
 
     @Test
     public void canParseJsonDocumentWhenPathIncludesKeyThatIsABooleanUsingEscaping() throws Exception {
-        final float number = from(this.JSON_PATH_WITH_BOOLEAN).getFloat("map.'false'");
+        final float number = from(JSON_PATH_WITH_BOOLEAN).getFloat("map.'false'");
 
         assertThat(number, equalTo(15.0f));
     }
 
     @Test
     public void canParseJsonDocumentWhenPathIncludesKeyThatIsABooleanUsingNoEscaping() throws Exception {
-        final float number = from(this.JSON_PATH_WITH_BOOLEAN).getFloat("map.true");
+        final float number = from(JSON_PATH_WITH_BOOLEAN).getFloat("map.true");
 
         assertThat(number, equalTo(12.3f));
     }
@@ -353,5 +354,21 @@ public class JsonPathTest {
         JsonPath path = new JsonPath("{ \"a-b\"  : \"minus\" , \"a.b\" : \"dot\"  , \"a.b-c\" : \"both\"  }" );
 
         assertThat(path.getString("'a.b-c'"), equalTo("both"));
+    }
+
+    /**
+     * Verifies that issue 195 is resolved.
+     */
+    @Test
+    public void canParseJsonDocumentWithMultipleConsecutiveIntegersInsidePath() throws Exception {
+        String json = "{\n" +
+                "    \"foo.bar.baz\": {\n" +
+                "        \"0.2.0\": \"test\"\n" +
+                "    }\n" +
+                "}";
+
+        final String string = from(json).getString("'foo.bar.baz'.'0.2.0'");
+
+        assertThat(string, equalTo("test"));
     }
 }
